kubernetes/base/manifests/namespace_demo-restricted-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restricted-sa
  labels:
    tokens: bound
    pod-security.kubernetes.io/enforce: restricted
