kubernetes/base/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: white
---
apiVersion: v1
kind: Namespace
metadata:
  name: black
