kubernetes/base/manifests/demo-pod-security-admission-enforce-restricted.yaml
#This one is in a separate file as it is expected to fail
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: psa-enforce-restricted
spec:
  containers:
  - name: nginx
    image: nginxinc/nginx-unprivileged:latest
