kubernetes/base/manifests/docs-website-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-website-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-website-prod
  template:
    metadata:
      labels:
        app: docs-website-prod
      annotations:
        buildTimestamp: "2023-09-01"
    spec:
      containers:
      - name: astro
        image: localhost:5000/docs-website:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - name: docs-content
          mountPath: /docs-content
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5
      volumes:
      - name: docs-content
        persistentVolumeClaim:
          claimName: docs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: docs-website-prod
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: docs-website-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-website-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pietro.top
    secretName: docs-website-tls
  rules:
  - host: pietro.top
    http:
      paths:
      - path: /docs(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: docs-website-prod
            port:
              number: 80
